--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding: 40px;
 }
 
 .App-logo {
@@ -30,4 +31,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.test {
+  border: 1px solid #282c34;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3D9970;
+  color: white;
+}
+
+.resize-it {
+  margin-top: 40px;
 }
